--- a/GitTest/src/main/webapp/ex01.html
+++ b/GitTest/src/main/webapp/ex01.html
@@ -11,5 +11,7 @@
 	<h1>팀장 세번째 커밋!</h1>
 	<h1>팀원2 네번째 커밋!</h1>
 	<h1>의진 다섯번쨰 커밋!</h1>
+	
+	<a href = "test.jsp">팀장 여섯번째 커밋 : 이것도 되나 봅시다</a>
 </body>
 </html>
