추가 수정 - 김의진

--- a/TravelMate/src/main/webapp/infoTokyo.html
+++ b/TravelMate/src/main/webapp/infoTokyo.html
@@ -14,11 +14,11 @@
         
         <nav>
             <ul>
-            	<li><a href="index.jsp">Home</a></li>
+            	<li><a href="mainPage.jsp">Home</a></li>
                 <li><a href="#">Notice</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="reviewList.html">Review</a></li>
-                <li><a href="info_tokyo.html" class="active">Info.Tokyo</a></li> <!-- 활성화된 메뉴 -->
+                <li><a href="infoTokyo.html" class="active">Info.Tokyo</a></li> <!-- 활성화된 메뉴 -->
             </ul>
         </nav>
     <main>
