--- a/TravelMate/src/main/webapp/reviewList.html
+++ b/TravelMate/src/main/webapp/reviewList.html
@@ -13,11 +13,11 @@
     
     <nav>
         <ul>
-        	<li><a href="index.jsp">Home</a></li>
+        	<li><a href="mainPage.jsp">Home</a></li>
             <li><a href="notice.html">Notice</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="reviewList.html" class="active">Review</a></li> <!-- 활성화된 메뉴 -->
-            <li><a href="info_tokyo.html">Info.Tokyo</a></li>
+            <li><a href="infoTokyo.html">Info.Tokyo</a></li>
         </ul>
     </nav>
 
