송유란 메인-칸반연결 11.05 9시5분

--- a/TravelMate/src/main/webapp/kb_index.html
+++ b/TravelMate/src/main/webapp/kb_index.html
@@ -27,6 +27,7 @@
     <button id = 'local'>로컬데이터삭제</button>
     
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/js/kb_script.js"></script>
 </body>
 </html>
