도쿄정보페이지에서 리뷰페이지로 이동안되는거 경로 수정 - 송유란

--- a/TravelMate/src/main/webapp/infoTokyo.html
+++ b/TravelMate/src/main/webapp/infoTokyo.html
@@ -17,7 +17,7 @@
             	<li><a href="mainPage.jsp">Home</a></li>
                 <li><a href="#">Notice</a></li>
                 <li><a href="#">FAQ</a></li>
-                <li><a href="reviewList.html">Review</a></li>
+                <li><a href="reviewList.jsp">Review</a></li>
                 <li><a href="infoTokyo.html" class="active">Info.Tokyo</a></li> <!-- 활성화된 메뉴 -->
             </ul>
         </nav>
